# kessler

./: .gitignore  Cargo.toml  README.md  flake.nix
assets/: icon.blend  icon.blend1  pot.blend  pot.blend1
res/kessler/: icon.glb  pot.glb
src/: kessler.rs  main.rs  repo.rs
