[package]
name = "kessler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
glam = "0.25.0"
mint = "0.5.9"
console-subscriber = "0.2.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
