[package]
name = "kessler"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
color-eyre = "0.6.2"
git2 = "0.18.3"
glam = "0.27.0"
manifest-dir-macros = "0.1.18"
ouroboros = "0.18.3"
petgraph = "0.6.4"
rand = "0.8.5"
rustc-hash = "1.1.0"
send_wrapper = "0.6.0"
serde = { version = "1.0.163", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[dependencies.stardust-xr-fusion]
git = "https://github.com/StardustXR/core.git"
# path = "../../core/fusion"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
# path = "../../molecules"
